ajout du menu deroulant horizontal

--- a/Menu deroulant/html/index.html
+++ b/Menu deroulant/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>button burger</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Menu deroulant/css/index.css">
 
 </head>
 
@@ -47,7 +47,7 @@
         </div>
     </footer>
 
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="Menu deroulant/js/index.js"></script>
 </body>
 
 </html>
