ajout du document exercice SQL

--- a/Menu-deroulant-horizontal/index.html
+++ b/Menu-deroulant-horizontal/index.html
@@ -97,6 +97,7 @@
     </header>
 
     <nav id="nav">
+        <br>
         <li><a href="#"><strong>Network</strong></a></li>
         <li><a href="#"><strong>Coordonnees</strong></a></li>
         <li><a href="#"><strong>Google Map</strong></a></li>
@@ -104,8 +105,8 @@
 
     <article>
         <div class="text-container">
-            <h1>LA TECHNOLOGIE DE DEMAIN</h1>
-            <img src="inc/img/tech2.jpg" alt="">
+            <h1>Bienvenue dans la Frique Numerique de Simplon</h1>
+            <img src="inc/img/7.jpg" alt="">
         </div>
 
         <div class="">
